force-app/src/objects/TR1__Copy_To_All_Customization__mdt.object
<CustomObject>
    <description>Setting to customise ATSv2 &quot;Copy To All&quot; function</description>
    <fields>
        <fullName>TR1__Copy_Duration_in_Minutes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying &quot;Duration in Minutes&quot; field</description>
        <label>Copy Duration in Minutes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Copy_Field_set_fields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/disable copying fields coming from Field set.</description>
        <inlineHelpText>Enable/disable copying fields coming from Field set.</inlineHelpText>
        <label>Copy Field set fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Copy_Interview_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying &quot;Interview Date&quot; field</description>
        <label>Copy Interview Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Copy_Interview_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying &quot;Interview Time&quot; field</description>
        <label>Copy Interview Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Copy_Interviewer_s__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying &quot;Interviewer(s)&quot; field</description>
        <label>Copy Interviewer(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Copy_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying &quot;Type&quot; field</description>
        <label>Copy Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Copy_Where__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying &quot;Where&quot; field</description>
        <label>Copy Where</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Copy_All__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for enabling/disabling &quot;Copy To All&quot; functionality</description>
        <label>Enable Copy All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__II_Copy_Email_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying Email&apos;s Attachments (Internal Interview only)</description>
        <label>II Copy Email’s Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__II_Copy_Email_Body__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying Email&apos;s Body (Internal Inteview only)</description>
        <label>II Copy Email’s Body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__II_Copy_Email_Subject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying Email&apos;s Subject (Internal Interview only)</description>
        <label>II Copy Email&apos;s Subject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__II_Copy_Message_Channels__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/Disable copying Internal Interview Message Channels.</description>
        <inlineHelpText>Enable/Disable copying Internal Interview Message Channels.</inlineHelpText>
        <label>II Copy Message Channels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__II_Copy_Personalization_Strings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/Disable copying Internal Interview Personalization Strings.</description>
        <inlineHelpText>Enable/Disable copying Internal Interview Personalization Strings.</inlineHelpText>
        <label>II Copy Personalization Strings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__II_Copy_Sender_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/Disable copying Internal Interview Email&apos;s &quot;Sender&quot; picklist field.</description>
        <inlineHelpText>Enable/Disable copying Internal Interview Email&apos;s &quot;Sender&quot; picklist field.</inlineHelpText>
        <label>II Copy Sender Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__II_Copy_cc_bcc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying CC/BCC email recipients(Internal Interview)</description>
        <inlineHelpText>Enable/Disable Copying Internal Interview CC/BCC email recipients</inlineHelpText>
        <label>II Copy cc/bcc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SoS_Copy_Interviewee_Emails_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying Interviewee Email&apos;s Attachments (Send Out only)</description>
        <label>SoS Copy Interviewee Email&apos;s Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SoS_Copy_Interviewee_Emails_Body__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying Interviewee Email&apos;s Body (Send Out only)</description>
        <label>SoS Copy Interviewee Email&apos;s Body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SoS_Copy_Interviewee_Emails_Subject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying Interviewee Email&apos;s Subject (Send Out only)</description>
        <label>SoS Copy Interviewee Email&apos;s Subject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SoS_Copy_Interviewee_Message_Channels__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/Disable Copying Send Out Interviewee Message Channels.</description>
        <inlineHelpText>Enable/Disable Copying Send Out Interviewee Message Channels.</inlineHelpText>
        <label>SoS Copy Interviewee Message Channels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SoS_Copy_Interviewee_Personalization_Str__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/Disable Copying Send Out Interviewee Personalization Strings.</description>
        <inlineHelpText>Enable/Disable Copying Send Out Interviewee Personalization Strings.</inlineHelpText>
        <label>SoS Copy Interviewee Personalization Str</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SoS_Copy_Interviewee_Sender_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/Disable Copying Send Out Interviewee &quot;Sender&quot; picklist field.</description>
        <inlineHelpText>Enable/Disable Copying Send Out Interviewee &quot;Sender&quot; picklist field.</inlineHelpText>
        <label>SoS Copy Interviewee Sender Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SoS_Copy_Interviewer_Emails_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying Interviewer/s Email&apos;s Attachments (Send Out only)</description>
        <label>SoS Copy Interviewer Email&apos;s Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SoS_Copy_Interviewer_Emails_Body__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying Interviewer/s Email&apos;s Body (Send Out only)</description>
        <label>SoS Copy Interviewer Email&apos;s Body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SoS_Copy_Interviewer_Emails_Subject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying Interviewer/s Email&apos;s Subject (Send Out only)</description>
        <label>SoS Copy Interviewer Email&apos;s Subject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SoS_Copy_Interviewer_Message_Channels__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/Disable Copying Send Out Interviewer/s Message Channels.</description>
        <inlineHelpText>Enable/Disable Copying Send Out Interviewer/s Message Channels.</inlineHelpText>
        <label>SoS Copy Interviewer Message Channels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SoS_Copy_Interviewer_Personalization_Str__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/Disable Copying Send Out Interviewer/s Personalization Strings.</description>
        <inlineHelpText>Enable/Disable Copying Send Out Interviewer/s Personalization Strings.</inlineHelpText>
        <label>SoS Copy Interviewer Personalization Str</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SoS_Copy_Interviewer_Sender_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/Disable Copying Send Out Interviewer/s &quot;Sender&quot; picklist field.</description>
        <inlineHelpText>Enable/Disable Copying Send Out Interviewer/s &quot;Sender&quot; picklist field.</inlineHelpText>
        <label>SoS Copy Interviewer Sender Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SoS_Copy_cc_bcc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable copying CC/BCC email recipients(Send Out Schedule)</description>
        <inlineHelpText>Enable/Disable Copying Send Out Schedule CC/BCC email recipients</inlineHelpText>
        <label>SoS Copy cc/bcc</label>
        <type>Checkbox</type>
    </fields>
    <label>Copy To All Customization</label>
    <pluralLabel>Copy To All Customizations</pluralLabel>
</CustomObject>